@@ -38,6 +38,7 @@ import static org.hisp.dhis.analytics.AnalyticsConstants.KEY_USER_ORGUNIT_GRANDC
 import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_ENROLLMENT_GEOMETRY;
 import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_EVENT_GEOMETRY;
 import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_GEOMETRY_LIST;
+import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_OU_GEOMETRY;
 import static org.hisp.dhis.analytics.event.data.DefaultEventCoordinateService.COL_NAME_TRACKED_ENTITY_GEOMETRY;
 import static org.hisp.dhis.analytics.event.data.DefaultEventDataQueryService.SortableItems.isSortable;
 import static org.hisp.dhis.analytics.event.data.DefaultEventDataQueryService.SortableItems.translateItemIfNecessary;
@@ -56,15 +57,18 @@ import static org.hisp.dhis.common.EventDataQueryRequest.getStageInValue;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Date;
+import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
+import org.hisp.dhis.analytics.AggregationType;
 import org.hisp.dhis.analytics.AnalyticsAggregationType;
 import org.hisp.dhis.analytics.DataQueryService;
 import org.hisp.dhis.analytics.EventOutputType;
@@ -73,10 +77,16 @@ import org.hisp.dhis.analytics.common.ColumnHeader;
 import org.hisp.dhis.analytics.event.EventDataQueryService;
 import org.hisp.dhis.analytics.event.EventQueryParams;
 import org.hisp.dhis.analytics.event.QueryItemLocator;
+import org.hisp.dhis.analytics.event.data.ou.OrgUnitSqlConstants;
 import org.hisp.dhis.analytics.event.data.queryitem.QueryItemFilterHandlerRegistry;
+import org.hisp.dhis.analytics.event.data.registrationou.RegistrationOuSqlConstants;
+import org.hisp.dhis.analytics.event.data.stage.StageQualifiedName;
+import org.hisp.dhis.analytics.event.data.stage.StageSortField;
 import org.hisp.dhis.analytics.table.EnrollmentAnalyticsColumnName;
 import org.hisp.dhis.analytics.table.EventAnalyticsColumnName;
 import org.hisp.dhis.common.BaseDimensionalItemObject;
+import org.hisp.dhis.common.BaseDimensionalObject;
+import org.hisp.dhis.common.DimensionType;
 import org.hisp.dhis.common.DimensionalItemObject;
 import org.hisp.dhis.common.DimensionalObject;
 import org.hisp.dhis.common.EventAnalyticalObject;
@@ -118,6 +128,7 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
   private static final String SCHEDULED_DATE_DIMENSION = "SCHEDULED_DATE";
 
   private static final String ENROLLMENT_OU_DIMENSION = "ENROLLMENT_OU";
+  private static final String REGISTRATION_OU_DIMENSION = RegistrationOuSqlConstants.DIMENSION_NAME;
   private static final String LEVEL_PREFIX = "LEVEL-";
 
   private final ProgramService programService;
@@ -168,7 +179,8 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
       throwIllegalQueryEx(ErrorCode.E7130, request.getStage());
     }
 
-    List<String> coordinateFields = getCoordinateFields(request);
+    CoordinateFieldResolution coordinateFieldResolution = getCoordinateFieldResolution(request);
+    List<String> coordinateFields = coordinateFieldResolution.coordinateFields();
 
     Set<EnrollmentStatus> enrollmentStatuses = new LinkedHashSet<>();
     if (request.getEnrollmentStatus() != null) {
@@ -217,6 +229,7 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
             .withTimeField(request.getTimeField())
             .withOrgUnitField(new OrgUnitField(request.getOrgUnitField()))
             .withCoordinateFields(coordinateFields)
+            .withGeometrySources(coordinateFieldResolution.geometrySources())
             .withHeaders(request.getHeaders())
             .withPage(request.getPage())
             .withPageSize(request.getPageSize())
@@ -336,6 +349,10 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
    */
   @Override
   public List<String> getCoordinateFields(EventDataQueryRequest request) {
+    return getCoordinateFieldResolution(request).coordinateFields();
+  }
+
+  private CoordinateFieldResolution getCoordinateFieldResolution(EventDataQueryRequest request) {
     final String program = request.getProgram();
     // TODO Remove when all web apps stop using old names of coordinate fields
     final String coordinateField = mapCoordinateField(request.getCoordinateField());
@@ -343,6 +360,8 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
     final String fallbackCoordinateField = mapCoordinateField(request.getFallbackCoordinateField());
 
     List<String> coordinateFields = new ArrayList<>();
+    boolean fallbackActive =
+        request.getFallbackCoordinateField() != null || defaultCoordinateFallback;
 
     if (coordinateField == null) {
       coordinateFields.add(StringUtils.EMPTY);
@@ -390,8 +409,41 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
         eventCoordinateService.getFallbackCoordinateFields(
             program, fallbackCoordinateField, defaultCoordinateFallback));
 
-    return coordinateFields.stream().distinct().collect(Collectors.toList());
+    List<String> distinctCoordinateFields = coordinateFields.stream().distinct().toList();
+
+    return new CoordinateFieldResolution(
+        distinctCoordinateFields,
+        fallbackActive ? getGeometrySources(distinctCoordinateFields) : List.of());
   }
+
+  private List<EventQueryParams.GeometrySource> getGeometrySources(List<String> coordinateFields) {
+    LinkedHashMap<String, String> geometrySources = new LinkedHashMap<>();
+
+    for (String coordinateField : coordinateFields) {
+      addGeometrySource(geometrySources, coordinateField);
+    }
+
+    return geometrySources.entrySet().stream()
+        .map(entry -> new EventQueryParams.GeometrySource(entry.getKey(), entry.getValue()))
+        .toList();
+  }
+
+  private void addGeometrySource(LinkedHashMap<String, String> geometrySources, String field) {
+    geometrySources.putIfAbsent(field, getGeometrySource(field));
+  }
+
+  private String getGeometrySource(String field) {
+    return switch (field) {
+      case COL_NAME_EVENT_GEOMETRY -> "psigeometry";
+      case COL_NAME_ENROLLMENT_GEOMETRY -> "pigeometry";
+      case COL_NAME_TRACKED_ENTITY_GEOMETRY -> "teigeometry";
+      case COL_NAME_OU_GEOMETRY -> COL_NAME_OU_GEOMETRY;
+      default -> StringUtils.removeEnd(field, "_geom");
+    };
+  }
+
+  private record CoordinateFieldResolution(
+      List<String> coordinateFields, List<EventQueryParams.GeometrySource> geometrySources) {}
 
   @Override
   public QueryItem getQueryItem(String dimensionString, Program program, EventOutputType type) {
@@ -473,13 +525,12 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
       EventDataQueryRequest request,
       Program pr,
       Set<String> existingKeys) {
-    if (!isStagePrefixed(header)) {
+    Optional<StageQualifiedName> name = StageQualifiedName.parse(header);
+    if (name.isEmpty()) {
       return false;
     }
 
-    int dot = header.lastIndexOf('.');
-    String prefix = header.substring(0, dot);
-    String suffix = header.substring(dot + 1);
+    String suffix = name.get().suffix();
     boolean enrollment = request.getEndpointItem() == RequestTypeAware.EndpointItem.ENROLLMENT;
 
     if (enrollment && isStageOuHelperSuffix(suffix)) {
@@ -487,7 +538,7 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
           params,
           request,
           pr,
-          prefix,
+          name.get(),
           EventAnalyticsColumnName.OU_COLUMN_NAME,
           EventAnalyticsColumnName.OU_COLUMN_NAME,
           existingKeys);
@@ -499,7 +550,7 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
           params,
           request,
           pr,
-          prefix,
+          name.get(),
           EVENT_DATE_DIMENSION,
           EventAnalyticsColumnName.OCCURRED_DATE_COLUMN_NAME,
           existingKeys);
@@ -511,7 +562,7 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
           params,
           request,
           pr,
-          prefix,
+          name.get(),
           EVENT_STATUS_DIMENSION,
           EventAnalyticsColumnName.EVENT_STATUS_COLUMN_NAME,
           existingKeys);
@@ -523,7 +574,7 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
           params,
           request,
           pr,
-          prefix,
+          name.get(),
           SCHEDULED_DATE_DIMENSION,
           EventAnalyticsColumnName.SCHEDULED_DATE_COLUMN_NAME,
           existingKeys);
@@ -540,22 +591,13 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
    * {@link #handleStagePrefixedSpecialCase}.
    */
   private static boolean shouldSkipHeader(String header, EventDataQueryRequest request) {
-    if (isStagePrefixed(header)) {
+    if (StageQualifiedName.isStageQualified(header)) {
       return false;
     }
     if (request.getEndpointAction() != RequestTypeAware.EndpointAction.QUERY) {
       return true;
     }
     return isStaticColumnSuffix(header);
-  }
-
-  /**
-   * Returns {@code true} when the header has the {@code {stageUid}.{suffix}} shape — i.e. an
-   * interior dot with non-empty text on both sides. A leading or trailing dot doesn't count.
-   */
-  private static boolean isStagePrefixed(String header) {
-    int dot = header.lastIndexOf('.');
-    return dot > 0 && dot < header.length() - 1;
   }
 
   /**
@@ -588,15 +630,15 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
       EventQueryParams.Builder params,
       EventDataQueryRequest request,
       Program pr,
-      String stagePrefix,
+      StageQualifiedName name,
       String dimensionSuffix,
       String itemIdSuffix,
       Set<String> existingKeys) {
-    String quickKey = stagePrefix + "." + itemIdSuffix;
+    String quickKey = name.withSuffix(itemIdSuffix).toString();
     if (existingKeys.contains(quickKey)) {
       return;
     }
-    String dimension = stagePrefix + "." + dimensionSuffix;
+    String dimension = name.withSuffix(dimensionSuffix).toString();
     try {
       QueryItem item =
           getQueryItem(dimension, pr, request.getOutputType(), request.getRelativePeriodDate());
@@ -646,15 +688,13 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
       EventQueryParams.Builder params, EventDataQueryRequest request, Program pr) {
     if (request.getAsc() != null) {
       for (String sort : request.getAsc()) {
-        params.addAscSortItem(
-            getSortItem(sort, pr, request.getOutputType(), request.getEndpointItem()));
+        params.addAscSortItem(getSortItem(sort, pr, request));
       }
     }
 
     if (request.getDesc() != null) {
       for (String sort : request.getDesc()) {
-        params.addDescSortItem(
-            getSortItem(sort, pr, request.getOutputType(), request.getEndpointItem()));
+        params.addDescSortItem(getSortItem(sort, pr, request));
       }
     }
   }
@@ -672,8 +712,19 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
           resolveEnrollmentOuFilter(params, request, userOrgUnits, input.items(), idScheme);
           continue;
         }
+        if (REGISTRATION_OU_DIMENSION.equals(input.dimensionId())) {
+          requireRegistrationProgram(pr);
+          params.withRegistrationOuFilter(
+              resolveRegistrationOuItems(input.items(), request, userOrgUnits, idScheme));
+          continue;
+        }
         if (isProgramStatusDimension(input.dimensionId())) {
-          enrollmentStatuses.addAll(parseEnrollmentStatuses(input.items(), input.rawDimension()));
+          if (isAggregateRequest(request)) {
+            requireNonEmptyStatusFilter(input.items(), input.rawDimension());
+            params.addFilter(getProgramStatusDimension(input.items(), input.rawDimension()));
+          } else {
+            enrollmentStatuses.addAll(parseEnrollmentStatuses(input.items(), input.rawDimension()));
+          }
           continue;
         }
 
@@ -717,8 +768,17 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
           resolveEnrollmentOuDimension(params, request, userOrgUnits, input.items(), idScheme);
           continue;
         }
+        if (REGISTRATION_OU_DIMENSION.equals(input.dimensionId())) {
+          resolveRegistrationOuDimension(
+              params, request, userOrgUnits, input.items(), idScheme, pr);
+          continue;
+        }
         if (isProgramStatusDimension(input.dimensionId())) {
-          enrollmentStatuses.addAll(parseEnrollmentStatuses(input.items(), input.rawDimension()));
+          if (isAggregateRequest(request)) {
+            params.addDimension(getProgramStatusDimension(input.items(), input.rawDimension()));
+          } else {
+            enrollmentStatuses.addAll(parseEnrollmentStatuses(input.items(), input.rawDimension()));
+          }
           continue;
         }
 
@@ -808,7 +868,8 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
     String dimensionId = getDimensionFromParam(rawDimension);
     List<String> items = getDimensionItemsFromParam(rawDimension);
 
-    if (ENROLLMENT_OU_DIMENSION.equals(dimensionId)) {
+    if (ENROLLMENT_OU_DIMENSION.equals(dimensionId)
+        || REGISTRATION_OU_DIMENSION.equals(dimensionId)) {
       normalizedInputs.add(
           new NormalizedDimensionInput(rawDimension, dimensionId, items, groupUUID));
       return;
@@ -848,7 +909,32 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
     }
 
     peTracker.insertMergedInto(normalizedInputs);
+    rejectRepeatedOrgUnitDimensions(normalizedInputs);
     return normalizedInputs;
+  }
+
+  /**
+   * Rejects a request naming ENROLLMENT_OU or REGISTRATION_OU more than once. Both are held outside
+   * {@code params.dimensions} and so are invisible to {@link
+   * org.hisp.dhis.analytics.DataQueryParams#getDuplicateDimensions()}, which is what raises E7201
+   * for an ordinary dimension. Without this check the last occurrence processed would silently win,
+   * and which one that is follows hash order rather than the order the caller wrote them in.
+   *
+   * <p>Several org units in one dimension ({@code REGISTRATION_OU:uidA;uidB}) is a single
+   * occurrence and stays valid, as does the same dimension used once as a dimension and once as a
+   * filter, since those are normalized separately.
+   */
+  private void rejectRepeatedOrgUnitDimensions(List<NormalizedDimensionInput> normalizedInputs) {
+    for (String dimensionId : List.of(ENROLLMENT_OU_DIMENSION, REGISTRATION_OU_DIMENSION)) {
+      long occurrences =
+          normalizedInputs.stream()
+              .filter(input -> dimensionId.equals(input.dimensionId()))
+              .count();
+
+      if (occurrences > 1) {
+        throwIllegalQueryEx(ErrorCode.E7201, dimensionId);
+      }
+    }
   }
 
   private record NormalizedDimensionInput(
@@ -919,16 +1005,71 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
     return queryItemLocator.getQueryItemFromDimension(itemId, program, type);
   }
 
-  private QueryItem getSortItem(
-      String item,
-      Program program,
-      EventOutputType type,
-      RequestTypeAware.EndpointItem endpointItem) {
-    if (isSortable(item)) {
+  private QueryItem getSortItem(String item, Program program, EventDataQueryRequest request) {
+    Optional<QueryItem> stageSort = resolveStageSortItem(item, program, request);
+    if (stageSort.isPresent()) {
+      return stageSort.get();
+    }
+    RequestTypeAware.EndpointItem endpointItem = request.getEndpointItem();
+    if (isSortable(item, endpointItem)) {
       return new QueryItem(
           new BaseDimensionalItemObject(translateItemIfNecessary(item, endpointItem)));
     }
-    return getQueryItem(item, program, type, null);
+    return getQueryItem(item, program, request.getOutputType(), null);
+  }
+
+  /**
+   * Resolves a {@code <stageUid>.<field>} sort item on the query endpoints, where the field is one
+   * of {@link StageSortField}. The stage is validated by resolving the field's canonical dimension
+   * through {@link #getQueryItem}; a bad stage stays an error.
+   *
+   * <p>An event row carries its own stage, so on the Event endpoint the prefix is dropped and the
+   * event's own column is ordered by. An enrollment row reads stage values from a stage CTE, so on
+   * the Enrollment endpoint the item stays stage-scoped and its id names the field to read from
+   * that CTE. Repeatable-stage offsets are not supported on stage sort fields and are rejected
+   * rather than silently collapsed to the most recent event.
+   *
+   * @return the resolved sort item, or empty when the input is not a stage sort field.
+   */
+  private Optional<QueryItem> resolveStageSortItem(
+      String item, Program program, EventDataQueryRequest request) {
+
+    if (request.getEndpointAction() != RequestTypeAware.EndpointAction.QUERY) {
+      return Optional.empty();
+    }
+    Optional<StageQualifiedName> name = StageQualifiedName.parse(item);
+    if (name.isEmpty()) {
+      return Optional.empty();
+    }
+    Optional<StageSortField> field = StageSortField.forRequestedSuffix(name.get().suffix());
+    if (field.isEmpty()) {
+      return Optional.empty();
+    }
+
+    QueryItem validated =
+        getQueryItem(
+            name.get().withSuffix(field.get().getCanonicalDimension()).toString(),
+            program,
+            request.getOutputType(),
+            null);
+
+    if (request.getEndpointItem() == RequestTypeAware.EndpointItem.EVENT) {
+      return Optional.of(new QueryItem(new BaseDimensionalItemObject(field.get().getItemId())));
+    }
+
+    if (name.get().hasRepeatableStageOffset()) {
+      throwIllegalQueryEx(ErrorCode.E7224, item);
+    }
+    QueryItem sortItem =
+        new QueryItem(
+            new BaseDimensionalItemObject(field.get().getItemId()),
+            program,
+            null,
+            validated.getValueType(),
+            AggregationType.NONE,
+            null);
+    sortItem.setProgramStage(validated.getProgramStage());
+    return Optional.of(sortItem);
   }
 
   private DimensionalItemObject getValueDimension(String value) {
@@ -992,27 +1133,66 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
         || ColumnHeader.PROGRAM_STATUS.getItem().equalsIgnoreCase(dimensionId);
   }
 
-  private Set<EnrollmentStatus> parseEnrollmentStatuses(
-      List<String> statusItems, String dimensionString) {
-    if (statusItems == null || statusItems.isEmpty()) {
+  private boolean isAggregateRequest(EventDataQueryRequest request) {
+    return request.getEndpointAction() == RequestTypeAware.EndpointAction.AGGREGATE;
+  }
+
+  /**
+   * Builds the {@link DimensionalObject} for {@code PROGRAM_STATUS}. The dimension identifier
+   * ({@code "programstatus"}) drives the response header; {@code dimensionName} ({@code
+   * "enrollmentstatus"}) is the underlying analytics column referenced by {@code quoteAlias} in the
+   * SQL builder. An empty item list is permitted on the aggregate dimension path — it means
+   * "include the column as a group-by without filtering rows."
+   */
+  private DimensionalObject getProgramStatusDimension(
+      List<String> rawItems, String dimensionString) {
+    return new BaseDimensionalObject(
+        ColumnHeader.PROGRAM_STATUS.getItem(),
+        DimensionType.PROGRAM_STATUS,
+        EventAnalyticsColumnName.ENROLLMENT_STATUS_COLUMN_NAME,
+        ColumnHeader.PROGRAM_STATUS.getName(),
+        parseStatusItems(rawItems, dimensionString));
+  }
+
+  private static Set<EnrollmentStatus> parseEnrollmentStatuses(
+      List<String> rawItems, String dimensionString) {
+    requireNonEmptyStatusFilter(rawItems, dimensionString);
+
+    return rawItems.stream()
+        .map(raw -> parseEnrollmentStatus(raw, dimensionString))
+        .collect(Collectors.toCollection(LinkedHashSet::new));
+  }
+
+  private static List<DimensionalItemObject> parseStatusItems(
+      List<String> rawItems, String dimensionString) {
+    if (rawItems == null || rawItems.isEmpty()) {
+      return List.of();
+    }
+
+    return rawItems.stream()
+        .map(raw -> parseEnrollmentStatus(raw, dimensionString))
+        .distinct()
+        .<DimensionalItemObject>map(status -> new BaseDimensionalItemObject(status.name()))
+        .toList();
+  }
+
+  private static EnrollmentStatus parseEnrollmentStatus(String raw, String dimensionString) {
+    if (StringUtils.isBlank(raw)) {
       throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
     }
 
-    Set<EnrollmentStatus> statuses = new LinkedHashSet<>();
-
-    for (String statusItem : statusItems) {
-      if (StringUtils.isBlank(statusItem)) {
-        throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
-      }
-
-      try {
-        statuses.add(EnrollmentStatus.valueOf(statusItem.trim().toUpperCase()));
-      } catch (IllegalArgumentException ex) {
-        throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
-      }
+    try {
+      return EnrollmentStatus.valueOf(raw.trim().toUpperCase(java.util.Locale.ROOT));
+    } catch (IllegalArgumentException ex) {
+      throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
+      throw ex; // unreachable
     }
+  }
 
-    return statuses;
+  private static void requireNonEmptyStatusFilter(List<String> rawItems, String dimensionString) {
+    if (rawItems == null || rawItems.isEmpty()) {
+      throwIllegalQueryEx(ErrorCode.E7222, dimensionString);
+    }
   }
 
   /**
@@ -1113,6 +1293,57 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
     return new EnrollmentOuResolution(uidItems, levels);
   }
 
+  /**
+   * Resolves REGISTRATION_OU items through the standard "ou" dimension pipeline, so that every
+   * keyword form (USER_ORGUNIT and its variants, LEVEL-n, OU_GROUP-uid) expands to concrete org
+   * units already carrying their hierarchy level.
+   */
+  private List<OrganisationUnit> resolveRegistrationOuItems(
+      List<String> items,
+      EventDataQueryRequest request,
+      List<OrganisationUnit> userOrgUnits,
+      IdScheme idScheme) {
+    if (items == null || items.isEmpty()) {
+      return List.of();
+    }
+
+    DimensionalObject ouDimension =
+        dataQueryService.getDimension("ou", items, request, userOrgUnits, true, idScheme);
+
+    if (ouDimension == null) {
+      return List.of();
+    }
+
+    return ouDimension.getItems().stream()
+        .filter(OrganisationUnit.class::isInstance)
+        .map(OrganisationUnit.class::cast)
+        .toList();
+  }
+
+  private void resolveRegistrationOuDimension(
+      EventQueryParams.Builder params,
+      EventDataQueryRequest request,
+      List<OrganisationUnit> userOrgUnits,
+      List<String> items,
+      IdScheme idScheme,
+      Program program) {
+    requireRegistrationProgram(program);
+
+    if ((items == null || items.isEmpty()) && isAggregateRequest(request)) {
+      throwIllegalQueryEx(ErrorCode.E7260, REGISTRATION_OU_DIMENSION);
+    }
+
+    params.withRegistrationOuDimension(
+        resolveRegistrationOuItems(items, request, userOrgUnits, idScheme));
+  }
+
+  /** Registration org unit is a property of a tracked entity, so it needs a tracker program. */
+  private void requireRegistrationProgram(Program program) {
+    if (program != null && !program.isRegistration()) {
+      throwIllegalQueryEx(ErrorCode.E7259, REGISTRATION_OU_DIMENSION);
+    }
+  }
+
   private record EnrollmentOuResolution(
       List<DimensionalItemObject> uidItems, Set<Integer> levels) {}
 
@@ -1135,6 +1366,10 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
         ColumnHeader.SCHEDULED_DATE.getItem(), EventAnalyticsColumnName.SCHEDULED_DATE_COLUMN_NAME),
     ORG_UNIT_NAME(ColumnHeader.ORG_UNIT_NAME.getItem()),
     ORG_UNIT_NAME_HIERARCHY(ColumnHeader.ORG_UNIT_NAME_HIERARCHY.getItem()),
+    // Projected under their own aliases only when REGISTRATION_OU is a dimension, so the query
+    // validator rejects sorting on them otherwise.
+    REGISTRATION_OU(ColumnHeader.REGISTRATION_OU.getItem()),
+    REGISTRATION_OU_NAME(ColumnHeader.REGISTRATION_OU_NAME.getItem()),
     ORG_UNIT_CODE(ColumnHeader.ORG_UNIT_CODE.getItem()),
     PROGRAM_STATUS(
         ColumnHeader.PROGRAM_STATUS.getItem(),
@@ -1171,6 +1406,17 @@ public class DefaultEventDataQueryService implements EventDataQueryService {
 
     static boolean isSortable(String itemName) {
       return Arrays.stream(values()).map(SortableItems::getItemName).anyMatch(itemName::equals);
+    }
+
+    /**
+     * Enrollment org unit columns are projected by the ENROLLMENT_OU join, which only the event
+     * endpoint builds, so they are sortable there alone.
+     */
+    static boolean isSortable(String itemName, RequestTypeAware.EndpointItem endpointItem) {
+      if (OrgUnitSqlConstants.RESULT_ALIASES.contains(itemName)) {
+        return endpointItem == RequestTypeAware.EndpointItem.EVENT;
+      }
+      return isSortable(itemName);
     }
 
     static String translateItemIfNecessary(String item, RequestTypeAware.EndpointItem type) {
